<resources>
    <string name="app_name">Food Truck</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home" />
    <string name="profile" />
    <string name="home2" />
    <string name="register">Register</string>
    <string name="fullName">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerBtn">Register</string>
    <string name="LoginTitle">Login</string>
    <string name="loginBtn">Login</string>
    <string name="signUpLink">New user? SignUp</string>
    <string name="loginLink">Already have an account? Login here</string>
    <string name="title_register">Welcome, \n Register</string>
    <string name="title_login">Welcome, \n Login</string>
    <string name="profileTitle">Profile</string>
    <string name="userFullName">Dani hagever</string>
    <string name="userMail">danihagever@gmail.com</string>
    <string name="btnLogoutText">Logout</string>
    <string name="edit_profile_dialog_title">Edit profile</string>
    <string name="edit_profile_dialog_message">Edit profile details</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_profile_pic_button_text">Browse photo</string>
    <string name="profile_name_hint">Full name</string>
    <string name="go_back"> Back </string>
    <string name="the_comment">The comment</string>
    <string name="the_dish_name">Dish name</string>
    <string name="my_comments">My comments</string>
    <string name="delete_comment_button">Delete comment</string>
    <string name="edit_button_description">Edit comment</string>
    <string name="the_comment_field">Comment</string>
    <string name="edit_comment_dialog_title">Edit comment</string>
    <string name="edit_profile_description">A pencil icon edit</string>
    <string name="for_background">For background</string>
    <string name="my_map_api_key">AIzaSyDjr5dkOJVS9X346hUoBtk84XAJtRQDlWY</string>
</resources>