<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/light_blue"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/placeNameTextView"
            android:text="@string/the_place_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/commentTextView"
            android:text="@string/the_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/placeholder_image"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <!-- Edit and Delete buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/recycle_bin_remove"
                android:background="@null"
                android:contentDescription="@string/delete_comment_button" />

            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/pencil_edit"
                android:background="@null"
                android:contentDescription="@string/edit_button_description"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/underLine"
            />


    </LinearLayout>

</androidx.cardview.widget.CardView>
